Compilation_Racket_Mips/piton/tests/errors/func_assign.py
def a(): print_int(1)
def b(): print_int(2)
a = b
